# Unique-Pointer

./: CMakeLists.txt  README.md  main.cpp  unique.hpp
include/: unique.hpp
tests/: CMakeLists.txt  test_unique_ptr.cpp
